# helpers

./: .gitignore  .gitmodules  .travis.yml  Makefile-includes.inc  Makefile.am  README.md  bootstrap  build-git.sh  configure.ac  praiskup-helpers.spec.in
.github/setup/: copr-build-setup  copr-custom-script
.github/workflows/: push-copr-build.yml
.travis/: copr-build  copr-build-setup  copr-custom-script
build-aux/: gen-makefile-am
etc/eimg/: Makefile.inc.in  eimg.sh.in
libexec/: Makefile.inc.in  eimg-execute-playbook.in  eimg-fix-cloud-init.in  eimg-fix-shadow.in  eimg-gen-auth-keys.in  eimg-get-ipv4.in  eimg-keep-one-kernel.in  eimg-stop.in
share/eimg/: Makefile.inc.in  lib.in
share/eimg/ansible-container/: Containerfile  Makefile.inc
share/eimg/files/: Makefile.inc  keep-one-kernel.sh
share/eimg/templates/: keep-one-kernel.tpl
